--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Prova 1</title>
+    <title>Title</title>
 </head>
 <body>
-Prova numero uno
+
 </body>
 </html>
