--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Prova 1</title>
 </head>
 <body>
-Prova numero 2!
+Link <br>
+<a href="esempio 1/recipe.html" target="blank"> link 1</a><br>
+<a href="https://www.google.com" target="blank"> link 2</a>
 </body>
 </html>
