--- a/esempio 1/recipe.html
+++ b/esempio 1/recipe.html
@@ -17,12 +17,13 @@
 
 <hr>
 
+<a href="https://www.google.com" target="blank"> link google</a> <br>
+<a href="../index.html"> index</a><br>
 <h2>Ingredients</h2>
 
 <p>
     <em>1 can (400g) of chick peas (garbanzo beans)</em><br>
-    <em>175g of tahini</em><br>
-    <em>6 sundried tomatoes</em><br>
+    <em>175g of tahini</em><br><em>6 sundried tomatoes</em><br>
     <em>Half a red pepper</em><br>
     <em>A pinch of cayenne pepper</em><br>
     <em>1 clove of garlic</em><br>
@@ -37,17 +38,19 @@
     O <sup>2</sup>
     <mark>
         <del>Remove</del>
-        <ins>the</ins> skin from the garlic, and chop coarsely</mark><br>
+        <ins>the</ins>
+        skin from the garlic, and chop coarsely
+    </mark>
+    <br>
     Remove all the seeds and stalk from the pepper, and chop coarsely<br>
     Add all the ingredients into a food processor<br>
     Process all the ingredients into a paste.<br>
     If you want a coarse "chunky" hummus, process it for a short time<br>
-    If you want a smooth hummus, process it for a longer time<br>
 </p>
 
 <p>
     For a different flavour, you could try blending in a small measure of lemon and coriander, chili pepper, lime and
-        chipotle, harissa and mint, or spinach and feta cheese. Experiment and see what works for you.
+    chipotle, harissa and mint, or spinach and feta cheese. Experiment and see what works for you.
 </p>
 
 <hr>
