--- a/IFRAME 2.html
+++ b/IFRAME 2.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>iFrame</title>
 </head>
 <body>
-
+<iframe src="IMG%201.html" width="200" height="150"></iframe>
 </body>
 </html>
