--- a/Index.html
+++ b/Index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>iFrame</title>
+    <title>$Title$</title>
 </head>
 <body>
-<iframe src="IMG%201.html" width="200" height="150"></iframe>
+$END$
 </body>
 </html>
