--- a/Index.html
+++ b/Index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Formula 1 2022</title>
 </head>
 <body>
-$END$
+Gp1
 </body>
 </html>
