--- a/IFRAME 2.html
+++ b/IFRAME 2.html
@@ -5,6 +5,14 @@
     <title>iFrame</title>
 </head>
 <body>
-<iframe src="IMG%201.html" width="200" height="150"></iframe>
+<iframe src="IMG%201.html" width="200" height="150" scrolling="no"></iframe>
+<br>
+<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+        src="https://www.openstreetmap.org/export/embed.html?bbox=12.40081787109375%2C42.96571873877725%2C12.543296813964846%2C43.17851834003697&amp;layer=mapnik"
+        style="border: 1px solid black"></iframe>
+<br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/DT6M1S6DwAQ" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
 </body>
 </html>
